--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,13 @@
     }
   },
   "include": [
-    "next-env.d.ts",
+    "**/*.glb",
+    "**/*.webp",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "**/*.glb"
+    "next-env.d.ts",
+    "dist/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
